--- a/index.html
+++ b/index.html
@@ -46,151 +46,151 @@
 			<ul id="works_contains">
 				<li class="active">
 					<div>
-						<img src="static/img/WorkH5_1.png" alt="" />
+						<img _src="static/img/WorkH5_1.png" alt="" />
 						<a href="#">管中窥豹</a>
 					</div>
 					<div>
-						<img src="static/img/WorkH5_2.png" alt="" />
+						<img _src="static/img/WorkH5_2.png" alt="" />
 						<a href="#">H5时钟</a>
 					</div>
 					<div>
-						<img src="static/img/WorkH5_3.png" alt="" />
+						<img _src="static/img/WorkH5_3.png" alt="" />
 						<a href="#">3D轮播图</a>
 					</div>
 					<div>
-						<img src="static/img/WorkH5_4.png" alt="" />
+						<img _src="static/img/WorkH5_4.png" alt="" />
 						<a>3D立方体</a>
 					</div>
 					<div>
-						<img src="static/img/WorkH5_5.png" alt="" />
+						<img _src="static/img/WorkH5_5.png" alt="" />
 						<a>3D爆炸效果</a>
 					</div>
 					<div>
-						<img src="static/img/WorkH5_6.png" alt="" />
+						<img _src="static/img/WorkH5_6.png" alt="" />
 						<a>钢琴</a>
 					</div>
 					<div>
-						<img src="static/img/WorkH5_7.png" alt="" />
+						<img _src="static/img/WorkH5_7.png" alt="" />
 						<a>3D切换效果</a>
 					</div>
 					<div>
-						<img src="static/img/WorkH5_8.png" alt="" />
+						<img _src="static/img/WorkH5_8.png" alt="" />
 						<a>翻页效果</a>
 					</div>
 					<div>
-						<img src="static/img/WorkH5_9.png" alt="" />
+						<img _src="static/img/WorkH5_9.png" alt="" />
 						<a>音乐播放器</a>
 					</div>
 				</li>
 				<li>
 					<div>
-						<img src="static/img/WorkJS1.png" alt="" />
+						<img _src="static/img/WorkJS1.png" alt="" />
 						<a href="#">超酷时钟</a>
 					</div>
 					<div>
-						<img src="static/img/WorkJS2.png" alt="" />
+						<img _src="static/img/WorkJS2.png" alt="" />
 						<a href="#">图片放大镜</a>
 					</div>
 					<div>
-						<img src="static/img/WorkJS3.png" alt="" />
+						<img _src="static/img/WorkJS3.png" alt="" />
 						<a href="#">手风琴</a>
 					</div>
 					<div>
-						<img src="static/img/WorkJS4.png" alt="" />
+						<img _src="static/img/WorkJS4.png" alt="" />
 						<a>进度条轮播图</a>
 					</div>
 					<div>
-						<img src="static/img/WorkJS5.png" alt="" />
+						<img _src="static/img/WorkJS5.png" alt="" />
 						<a>飞速离子</a>
 					</div>
 					<div>
-						<img src="static/img/WorkJS6.png" alt="" />
+						<img _src="static/img/WorkJS6.png" alt="" />
 						<a>原生JS实现的3D效果</a>
 					</div>
 					<div>
-						<img src="static/img/WorkJS7.png" alt="" />
+						<img _src="static/img/WorkJS7.png" alt="" />
 						<a>苹果菜单效果</a>
 					</div>
 					<div>
-						<img src="static/img/WorkJS8.png" alt="" />
+						<img _src="static/img/WorkJS8.png" alt="" />
 						<a>任意拖拽的盒子</a>
 					</div>
 					<div>
-						<img src="static/img/WorkJS9.png" alt="" />
+						<img _src="static/img/WorkJS9.png" alt="" />
 						<a>瀑布流</a>
 					</div>
 				</li>
 				<li>
 					<div>
-						<img src="static/img/WorkUI1.png" alt="" />
+						<img _src="static/img/WorkUI1.png" alt="" />
 						<a>智享学院</a>
 					</div>
 					<div>
-						<img src="static/img/WorkUI2.png" alt="" />
+						<img _src="static/img/WorkUI2.png" alt="" />
 						<a>美丽说</a>
 					</div>
 					<div>
-						<img src="static/img/WorkUI3.png" alt="" />
+						<img _src="static/img/WorkUI3.png" alt="" />
 						<a>爱奇艺</a>
 					</div>
 					<div>
-						<img src="static/img/WorkUI4.png" alt="" />
+						<img _src="static/img/WorkUI4.png" alt="" />
 						<a>灵魂回想</a>
 					</div>
 					<div>
-						<img src="static/img/WorkUI5.png" alt="" />
+						<img _src="static/img/WorkUI5.png" alt="" />
 						<a>二手车网</a>
 					</div>
 					<div>
-						<img src="static/img/WorkUI6.png" alt="" />
+						<img _src="static/img/WorkUI6.png" alt="" />
 						<a>JD</a>
 					</div>
 					<div>
-						<img src="static/img/WorkUI7.png" alt="" />
+						<img _src="static/img/WorkUI7.png" alt="" />
 						<a>英汉教育</a></div>
 					<div>
-						<img src="static/img/WorkUI8.png" alt="" />
+						<img _src="static/img/WorkUI8.png" alt="" />
 						<a>百度</a>
 					</div>
 					<div>
-						<img src="static/img/WorkUI9.png" alt="" />
+						<img _src="static/img/WorkUI9.png" alt="" />
 						<a>键盘</a>
 					</div>
 				</li>
 				<li>
 					<div>
-						<img src="static/img/WorkCV1.png" alt="" />
+						<img _src="static/img/WorkCV1.png" alt="" />
 						<a>炫酷星系图</a>
 					</div>
 					<div>
-						<img src="static/img/WorkCV2.png" alt="" />
+						<img _src="static/img/WorkCV2.png" alt="" />
 						<a>摩擦力的小球</a>
 					</div>
 					<div>
-						<img src="static/img/WorkCV3.png" alt="" />
+						<img _src="static/img/WorkCV3.png" alt="" />
 						<a>奔跑的小萝莉</a>
 					</div>
 					<div>
-						<img src="static/img/WorkCV4.png" alt="" />
+						<img _src="static/img/WorkCV4.png" alt="" />
 						<a>苹果手表</a>
 					</div>
 					<div>
-						<img src="static/img/WorkCV5.png" alt="" />
+						<img _src="static/img/WorkCV5.png" alt="" />
 						<a>图片裁切</a>
 					</div>
 					<div>
-						<img src="" alt="建设中" />
+						<img _src="" alt="建设中" />
 						<a>building...</a>
 					</div>
 					<div>
-					<img src="" alt="建设中" />
+					<img _src="" alt="建设中" />
 						<a>building...</a></div>
 					<div>
-						<img src="" alt="建设中" />
+						<img _src="" alt="建设中" />
 						<a>building...</a>
 					</div>
 					<div>
-						<img src="" alt="建设中" />
+						<img _src="" alt="建设中" />
 						<a>building...</a>
 					</div>
 				</li>
@@ -201,27 +201,27 @@
 			<div class="fourcontain">
 				<a class="f_con_1 f_con" href="#">
 					<div class="brief">躲避球</div>
-					<img src="static/img/game1.png"/>
+					<img _src="static/img/game1.png"/>
 				</a>
 				<a class="f_con_2 f_con" href="#">
 					<div class="brief">贪吃蛇</div>
-					<img src="static/img/game2.png"/>
+					<img _src="static/img/game2.png"/>
 				</a>
 				<a class="f_con_3 f_con" href="#">
 					<div class="brief">捕鱼达人</div>
-					<img src="static/img/game3.png"/>
+					<img _src="static/img/game3.png"/>
 				</a>
 				<a class="f_con_4 f_con" href="#">
 					<div class="brief"></div>
-					<img src="" alt="建设中"/>
+					<img _src="" alt="建设中"/>
 				</a>
 				<a class="f_con_5 f_con" href="#">
 					<div class="brief"></div>
-					<img src="" alt="建设中"/>
+					<img _src="" alt="建设中"/>
 				</a>
 				<a class="f_con_6 f_con" href="#">
 					<div class="brief"></div>
-					<img src="" alt="建设中"/>
+					<img _src="" alt="建设中"/>
 				</a>
 			</div>
 		</section>
@@ -252,55 +252,7 @@
 		<script src="libs/js/header.js" type="text/javascript" charset="utf-8"></script>
 		<script src="libs/js/main.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
-			var oWorks = document.querySelector('#works');
-			var aWorksDiv = document.querySelectorAll('.box_work div');
-			var aWorksContains = document.querySelectorAll('#works_contains>li');
-			var iWorksDivR = 130;
-			oWorks.onclick = function(ev){//console.log(1);
-				setCtlArr();
-				ev.stopPropagation();
-			};
-			setCtlArr();
-			function setCtlArr(){
-				oWorks.classList.toggle('active');
-				aWorksDiv.forEach(function(oDiv,index){
-					clearTimeout(oDiv.timer);
-					oDiv.timer = setTimeout(function(){
-						if(oWorks.classList.contains('active')){
-							oDiv.style.transform = `translateY(${Math.cos(dtr(index/3*90+90))*iWorksDivR}px) translateX(${Math.cos(dtr(index/3*90))*iWorksDivR}px)`;
-						}else{
-							oDiv.style.transform = '';
-						}
-						//console.log(dtr(index/3*90));
-						
-					},index*100);
-				});
-			}
-			//alert(aWorksDiv.length);
-			function dtr(deg){
-				return deg/180*Math.PI;
-			}
-			aWorksDiv.forEach(function(oDiv,index){
-				oDiv.onclick = function(ev){//console.log(aWorksContains.length);
-					aWorksContains.forEach(function(oDivIn,ind){
-						oDivIn.classList.remove('active');
-					});
-					aWorksContains[index].classList.add('active');
-					ev.stopPropagation();
-				};
-			});
-			/*window.addEventListener('wheel',lazyLoad,false);
-			var aImg = document.querySelectorAll('img');
-			function lazyLoad(){
-				aImg.forEach(function(oImg,index){
-					if((getFinilOffsetTop(oImg)-document.body.scrollTop) <= document.documentElement.clientHeight ){
-						oImg.src = oImg.getAttribute('_src');
-					}
-				});
-			}
-			function getFinilOffsetTop(obj){
-				
-			}*/
+			
 		</script>
 	</body>
 </html>
