--- a/index.html
+++ b/index.html
@@ -46,136 +46,136 @@
 			<ul id="works_contains">
 				<li class="active">
 					<div>
-						<img _src="static/img/WorkH5_1.png" alt="" />
+						<img _src="static/img/WorkH5_1.png" alt="加载中" />
 						<a href="#">管中窥豹</a>
 					</div>
 					<div>
-						<img _src="static/img/WorkH5_2.png" alt="" />
+						<img _src="static/img/WorkH5_2.png" alt="加载中" />
 						<a href="#">H5时钟</a>
 					</div>
 					<div>
-						<img _src="static/img/WorkH5_3.png" alt="" />
+						<img _src="static/img/WorkH5_3.png" alt="加载中" />
 						<a href="#">3D轮播图</a>
 					</div>
 					<div>
-						<img _src="static/img/WorkH5_4.png" alt="" />
+						<img _src="static/img/WorkH5_4.png" alt="加载中" />
 						<a>3D立方体</a>
 					</div>
 					<div>
-						<img _src="static/img/WorkH5_5.png" alt="" />
+						<img _src="static/img/WorkH5_5.png" alt="加载中" />
 						<a>3D爆炸效果</a>
 					</div>
 					<div>
-						<img _src="static/img/WorkH5_6.png" alt="" />
+						<img _src="static/img/WorkH5_6.png" alt="加载中" />
 						<a>钢琴</a>
 					</div>
 					<div>
-						<img _src="static/img/WorkH5_7.png" alt="" />
+						<img _src="static/img/WorkH5_7.png" alt="加载中" />
 						<a>3D切换效果</a>
 					</div>
 					<div>
-						<img _src="static/img/WorkH5_8.png" alt="" />
+						<img _src="static/img/WorkH5_8.png" alt="加载中" />
 						<a>翻页效果</a>
 					</div>
 					<div>
-						<img _src="static/img/WorkH5_9.png" alt="" />
+						<img _src="static/img/WorkH5_9.png" alt="加载中" />
 						<a>音乐播放器</a>
 					</div>
 				</li>
 				<li>
 					<div>
-						<img _src="static/img/WorkJS1.png" alt="" />
+						<img _src="static/img/WorkJS1.png" alt="加载中" />
 						<a href="#">超酷时钟</a>
 					</div>
 					<div>
-						<img _src="static/img/WorkJS2.png" alt="" />
+						<img _src="static/img/WorkJS2.png" alt="加载中" />
 						<a href="#">图片放大镜</a>
 					</div>
 					<div>
-						<img _src="static/img/WorkJS3.png" alt="" />
+						<img _src="static/img/WorkJS3.png" alt="加载中" />
 						<a href="#">手风琴</a>
 					</div>
 					<div>
-						<img _src="static/img/WorkJS4.png" alt="" />
+						<img _src="static/img/WorkJS4.png" alt="加载中" />
 						<a>进度条轮播图</a>
 					</div>
 					<div>
-						<img _src="static/img/WorkJS5.png" alt="" />
+						<img _src="static/img/WorkJS5.png" alt="加载中" />
 						<a>飞速离子</a>
 					</div>
 					<div>
-						<img _src="static/img/WorkJS6.png" alt="" />
+						<img _src="static/img/WorkJS6.png" alt="加载中" />
 						<a>原生JS实现的3D效果</a>
 					</div>
 					<div>
-						<img _src="static/img/WorkJS7.png" alt="" />
+						<img _src="static/img/WorkJS7.png" alt="加载中" />
 						<a>苹果菜单效果</a>
 					</div>
 					<div>
-						<img _src="static/img/WorkJS8.png" alt="" />
+						<img _src="static/img/WorkJS8.png" alt="加载中" />
 						<a>任意拖拽的盒子</a>
 					</div>
 					<div>
-						<img _src="static/img/WorkJS9.png" alt="" />
+						<img _src="static/img/WorkJS9.png" alt="加载中" />
 						<a>瀑布流</a>
 					</div>
 				</li>
 				<li>
 					<div>
-						<img _src="static/img/WorkUI1.png" alt="" />
+						<img _src="static/img/WorkUI1.png" alt="加载中" />
 						<a>智享学院</a>
 					</div>
 					<div>
-						<img _src="static/img/WorkUI2.png" alt="" />
+						<img _src="static/img/WorkUI2.png" alt="加载中" />
 						<a>美丽说</a>
 					</div>
 					<div>
-						<img _src="static/img/WorkUI3.png" alt="" />
+						<img _src="static/img/WorkUI3.png" alt="加载中" />
 						<a>爱奇艺</a>
 					</div>
 					<div>
-						<img _src="static/img/WorkUI4.png" alt="" />
+						<img _src="static/img/WorkUI4.png" alt="加载中" />
 						<a>灵魂回想</a>
 					</div>
 					<div>
-						<img _src="static/img/WorkUI5.png" alt="" />
+						<img _src="static/img/WorkUI5.png" alt="加载中" />
 						<a>二手车网</a>
 					</div>
 					<div>
-						<img _src="static/img/WorkUI6.png" alt="" />
+						<img _src="static/img/WorkUI6.png" alt="加载中" />
 						<a>JD</a>
 					</div>
 					<div>
-						<img _src="static/img/WorkUI7.png" alt="" />
+						<img _src="static/img/WorkUI7.png" alt="加载中" />
 						<a>英汉教育</a></div>
 					<div>
-						<img _src="static/img/WorkUI8.png" alt="" />
+						<img _src="static/img/WorkUI8.png" alt="加载中" />
 						<a>百度</a>
 					</div>
 					<div>
-						<img _src="static/img/WorkUI9.png" alt="" />
+						<img _src="static/img/WorkUI9.png" alt="加载中" />
 						<a>键盘</a>
 					</div>
 				</li>
 				<li>
 					<div>
-						<img _src="static/img/WorkCV1.png" alt="" />
+						<img _src="static/img/WorkCV1.png" alt="加载中" />
 						<a>炫酷星系图</a>
 					</div>
 					<div>
-						<img _src="static/img/WorkCV2.png" alt="" />
+						<img _src="static/img/WorkCV2.png" alt="加载中" />
 						<a>摩擦力的小球</a>
 					</div>
 					<div>
-						<img _src="static/img/WorkCV3.png" alt="" />
+						<img _src="static/img/WorkCV3.png" alt="加载中" />
 						<a>奔跑的小萝莉</a>
 					</div>
 					<div>
-						<img _src="static/img/WorkCV4.png" alt="" />
+						<img _src="static/img/WorkCV4.png" alt="加载中" />
 						<a>苹果手表</a>
 					</div>
 					<div>
-						<img _src="static/img/WorkCV5.png" alt="" />
+						<img _src="static/img/WorkCV5.png" alt="加载中" />
 						<a>图片裁切</a>
 					</div>
 					<div>
@@ -201,15 +201,15 @@
 			<div class="fourcontain">
 				<a class="f_con_1 f_con" href="#">
 					<div class="brief">躲避球</div>
-					<img _src="static/img/game1.png"/>
+					<img _src="static/img/game1.png" alt="加载中"/>
 				</a>
 				<a class="f_con_2 f_con" href="#">
 					<div class="brief">贪吃蛇</div>
-					<img _src="static/img/game2.png"/>
+					<img _src="static/img/game2.png" alt="加载中"/>
 				</a>
 				<a class="f_con_3 f_con" href="#">
 					<div class="brief">捕鱼达人</div>
-					<img _src="static/img/game3.png"/>
+					<img _src="static/img/game3.png" alt="加载中"/>
 				</a>
 				<a class="f_con_4 f_con" href="#">
 					<div class="brief"></div>
