--- a/index.html
+++ b/index.html
@@ -1,22 +1,49 @@
 <!DOCTYPE html>
 <html>
+
 	<head>
 		<meta charset="UTF-8">
 		<title></title>
-		<link rel="stylesheet" type="text/css" href="libs/css/main.css"/>
+		<link rel="stylesheet" type="text/css" href="libs/css/main.css" />
 		<style type="text/css">
 			
 		</style>
 	</head>
+
 	<body>
 		<canvas id=""></canvas>
 		<header>
 			<ul>
-				<li><div><a>首页</a><a href="">index</a></div></li>
-				<li><div><a>技能</a><a href="">skill</a></div></li>
-				<li><div><a>作品</a><a href="">works</a></div></li>
-				<li><div><a>游戏</a><a href="">games</a></div></li>
-				<li><div><a>简介</a><a href="">intro</a></div></li>
+				<li>
+					<div>
+						<a>首页</a>
+						<a href="">index</a>
+					</div>
+				</li>
+				<li>
+					<div>
+						<a>技能</a>
+						<a href="">skill</a>
+					</div>
+				</li>
+				<li>
+					<div>
+						<a>作品</a>
+						<a href="">works</a>
+					</div>
+				</li>
+				<li>
+					<div>
+						<a>游戏</a>
+						<a href="">games</a>
+					</div>
+				</li>
+				<li>
+					<div>
+						<a>简介</a>
+						<a href="">intro</a>
+					</div>
+				</li>
 			</ul>
 			<ol>
 				<li></li>
@@ -26,7 +53,9 @@
 			<audio src="static/audio/RADWIMPS - なんでもないや (movie ver.).mp3" autoplay loop hidden></audio>
 		</header>
 		<section>
-			
+			<div class="welcome">
+				welcome
+			</div>
 		</section>
 		<section class="one"></section>
 		<section>
@@ -147,7 +176,8 @@
 					</div>
 					<div>
 						<img _src="static/img/WorkUI7.png" alt="加载中" />
-						<a>英汉教育</a></div>
+						<a>英汉教育</a>
+					</div>
 					<div>
 						<img _src="static/img/WorkUI8.png" alt="加载中" />
 						<a>百度</a>
@@ -183,8 +213,9 @@
 						<a>building...</a>
 					</div>
 					<div>
-					<img _src="" alt="建设中" />
-						<a>building...</a></div>
+						<img _src="" alt="建设中" />
+						<a>building...</a>
+					</div>
 					<div>
 						<img _src="" alt="建设中" />
 						<a>building...</a>
@@ -201,27 +232,27 @@
 			<div class="fourcontain">
 				<a class="f_con_1 f_con" href="#">
 					<div class="brief">躲避球</div>
-					<img _src="static/img/game1.png" alt="加载中"/>
+					<img _src="static/img/game1.png" alt="加载中" />
 				</a>
 				<a class="f_con_2 f_con" href="#">
 					<div class="brief">贪吃蛇</div>
-					<img _src="static/img/game2.png" alt="加载中"/>
+					<img _src="static/img/game2.png" alt="加载中" />
 				</a>
 				<a class="f_con_3 f_con" href="#">
 					<div class="brief">捕鱼达人</div>
-					<img _src="static/img/game3.png" alt="加载中"/>
+					<img _src="static/img/game3.png" alt="加载中" />
 				</a>
 				<a class="f_con_4 f_con" href="#">
 					<div class="brief"></div>
-					<img _src="" alt="建设中"/>
+					<img _src="" alt="建设中" />
 				</a>
 				<a class="f_con_5 f_con" href="#">
 					<div class="brief"></div>
-					<img _src="" alt="建设中"/>
+					<img _src="" alt="建设中" />
 				</a>
 				<a class="f_con_6 f_con" href="#">
 					<div class="brief"></div>
-					<img _src="" alt="建设中"/>
+					<img _src="" alt="建设中" />
 				</a>
 			</div>
 		</section>
@@ -252,7 +283,7 @@
 		<script src="libs/js/header.js" type="text/javascript" charset="utf-8"></script>
 		<script src="libs/js/main.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
-			
 		</script>
 	</body>
+
 </html>
