--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			<audio src="static/audio/RADWIMPS - なんでもないや (movie ver.).mp3" autoplay loop hidden></audio>
 		</header>
 		<section>
-			<div class="welcome">
+			<div class="welcome movewelcome">
 				welcome
 			</div>
 		</section>
@@ -283,6 +283,7 @@
 		<script src="libs/js/header.js" type="text/javascript" charset="utf-8"></script>
 		<script src="libs/js/main.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
+			
 		</script>
 	</body>
 
