change index text

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 					<div class="brief">贪吃蛇</div>
 					<img _src="static/img/game2.png" alt="加载中" />
 				</a>
-				<a class="f_con_3 f_con" href="#">
+				<a class="f_con_3 f_con" href="demo/capturefish/">
 					<div class="brief">捕鱼达人</div>
 					<img _src="static/img/game3.png" alt="加载中" />
 				</a>
