--- a/index.html
+++ b/index.html
@@ -230,11 +230,11 @@
 		<section class="three"></section>
 		<section>
 			<div class="fourcontain">
-				<a class="f_con_1 f_con" href="#">
+				<a class="f_con_1 f_con" href="demo/elude/">
 					<div class="brief">躲避球</div>
 					<img _src="static/img/game1.png" alt="加载中" />
 				</a>
-				<a class="f_con_2 f_con" href="#">
+				<a class="f_con_2 f_con" href="demo/glusnake/">
 					<div class="brief">贪吃蛇</div>
 					<img _src="static/img/game2.png" alt="加载中" />
 				</a>
