--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			<audio src="static/audio/RADWIMPS - なんでもないや (movie ver.).mp3" autoplay loop hidden></audio>
 		</header>
 		<section>
-			<div class="welcome movewelcome">
+			<div class="welcome">
 				welcome
 			</div>
 		</section>
@@ -76,39 +76,39 @@
 				<li class="active">
 					<div>
 						<img _src="static/img/WorkH5_1.png" alt="加载中" />
-						<a href="#">管中窥豹</a>
+						<a href="demo/h5/lookpic/">管中窥豹</a>
 					</div>
 					<div>
 						<img _src="static/img/WorkH5_2.png" alt="加载中" />
-						<a href="#">H5时钟</a>
+						<a href="demo/h5/clock/">H5时钟</a>
 					</div>
 					<div>
 						<img _src="static/img/WorkH5_3.png" alt="加载中" />
-						<a href="#">3D轮播图</a>
+						<a href="demo/h5/3Dcarousel/">3D轮播图</a>
 					</div>
 					<div>
 						<img _src="static/img/WorkH5_4.png" alt="加载中" />
-						<a>3D立方体</a>
+						<a href="demo/h5/3Dsquare/">3D立方体</a>
 					</div>
 					<div>
 						<img _src="static/img/WorkH5_5.png" alt="加载中" />
-						<a>3D爆炸效果</a>
+						<a href="demo/h5/3Dblock/">3D爆炸效果</a>
 					</div>
 					<div>
 						<img _src="static/img/WorkH5_6.png" alt="加载中" />
-						<a>钢琴</a>
+						<a href="demo/h5/sing/">钢琴</a>
 					</div>
 					<div>
 						<img _src="static/img/WorkH5_7.png" alt="加载中" />
-						<a>3D切换效果</a>
+						<a href="demo/h5/change/">3D切换效果</a>
 					</div>
 					<div>
 						<img _src="static/img/WorkH5_8.png" alt="加载中" />
-						<a>翻页效果</a>
+						<a  href="demo/h5/translate/">翻页效果</a>
 					</div>
 					<div>
 						<img _src="static/img/WorkH5_9.png" alt="加载中" />
-						<a>音乐播放器</a>
+						<a   href="demo/h5/song/">音乐播放器</a>
 					</div>
 				</li>
 				<li>
